<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".ui.SubmitActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:src="@drawable/baseline_keyboard_backspace_white_24dp"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content">
                    </ImageView>

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="300dp"
                        android:src="@drawable/gads"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content">
                    </ImageView>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/project_submission"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_first_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/first_name"/>

            <EditText
                android:id="@+id/edt_last_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/last_name"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/email_address"/>

        <EditText
            android:id="@+id/edt_github"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/project_on_github_link"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_btn_submit"

            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>
